test/bad/functions/name02.px

func f(String x) def
    skip

f, f = f, f
